# ai-center

./: README.md  pyproject.toml  requirements.txt  setup.py
aicenter/: __init__.py  img.py  ioc.py  net.py  sam.py  scripts.py  utils.py
deploy/: ai-centering.service  start.sh
test/: inference.py
