[project]
name = "ai-center"
dynamic = ["version"]
license = "MIT AND Apache-2.0"
license-files = [
    "LICENSE",
    "aicenter/lib/LICENSE",
]
description = "Automated Sample Alignment for MX using a YOLO Model"
authors = [
    {name = "Michel Fodje", email = "michel.fodje@lightsource.ca"},
    {name = 'Stuart Read', email = 'stuart.read@lightsource.ca'}
]
readme = "README.md"
requires-python = ">=3.11,<3.14.1 || >3.14.1,<3.15"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "ultralytics (==8.4.62)",
    "onnxruntime-gpu (>=1.26.0,<2.0.0)",
    "opencv-python (>=4.13.0.92,<5.0.0.0)",
    "redis (>=8.0.0,<9.0.0)",
    "numpy (>=2.4.6,<3.0.0)",
    "devioc (>=2025.6.2,<2026.0.0)",
]

[project.urls]
Homepage = "https://github.com/michel4j/ai-center"
Issues = "https://github.com/michel4j/ai-center/issues"

[tool.poetry]
packages = [
    { include = "aicenter", from = "." },
]
version = "0.0.0"

[tool.poetry.extras]
test = [ "opencv-contrib-python" ]

[tool.poetry.scripts]
"app.server" = "aicenter.scripts:server_main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry.requires-plugins]
poetry-dynamic-versioning = { version = ">=1.0.0,<2.0.0", extras = ["plugin"] }

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
format = "{base}.{revision}{distance}"

